# cli-question

./: .gitignore  LICENSE  PLAN.md  QUICKSTART.md  README.md  TEST.md  install.sh  uninstall.sh
Formula/: aido.rb
aido/: Cargo.toml
aido/src/: main.rs
aido/src/ai/: client.rs  mod.rs  parser.rs  prompts.rs
aido/src/config/: mod.rs  settings.rs
aido/src/executor/: confirm.rs  mod.rs  shell.rs  validator.rs
aido/src/modes/: ask_mode.rs  do_mode.rs  mod.rs
aido/src/ui/: display.rs  input.rs  mod.rs  settings.rs
